# QuickGPT

./: Licence.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs  turbo.json
.github/workflows/: main.yml
app/: .env  package.json  tailwind.config.cjs
app/src/: App.tsx  config.ts  helpers.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: macspot.rs  main.rs  spotlight.rs
app/src/components/: EditPerson.tsx  Input.tsx  Markdown.tsx  Notification.tsx  PersonalitySelect.tsx  SettingsWrapper.tsx  Shortcuts.ts  Tabs.tsx  Update.tsx
app/src/hooks/: useFocus.ts  useGPT.ts  useIsClient.ts  usePeople.ts  usePrompts.ts  useShortcut.ts  useStore.ts  useStore.tsx  useTheme.ts  useWindowPosition.ts
app/src/screens/: AddPerson.tsx  EditPerson.tsx  Home.tsx  Persons.tsx  Settings.tsx
landing/: .eslintrc.cjs  next.config.js  next.config.mjs  package.json  tailwind.config.cjs
landing/src/: config.ts  env.mjs
landing/src/app/: Download.tsx  globals.css  layout.tsx  page.tsx
landing/src/app/(layout)/: layout.tsx  page.tsx
landing/src/app/(mdx)/: layout.tsx
landing/src/app/app/: page.tsx
landing/src/components/: Download.tsx  Footer.tsx  Header.tsx  Logo.tsx  Question.tsx
landing/src/pages/: index.tsx
src/: App.tsx  helpers.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Markdown.tsx
src/hooks/: useFocus.ts  useGPT.ts  useShortcut.ts  useStore.ts
src/screens/: Home.tsx  Settings.tsx
(+12 files in other folders)
